--- a/GameControllerApp/package.json
+++ b/GameControllerApp/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
     "@ionic-native/core": "~4.15.0",
+    "@ionic-native/screen-orientation": "^4.16.0",
     "@ionic-native/splash-screen": "~4.15.0",
     "@ionic-native/status-bar": "~4.15.0",
     "@ionic/storage": "2.2.0",
+    "cordova-plugin-screen-orientation": "^3.0.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "ng-socket-io": "^0.2.4",
@@ -35,5 +37,10 @@
     "@ionic/app-scripts": "3.2.0",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-screen-orientation": {}
+    }
+  }
 }
